#9 barplot: fix text cutoff at far left/right

--- a/src/assets/css/barplot.css
+++ b/src/assets/css/barplot.css
@@ -13,6 +13,10 @@
     cursor: pointer;
 }
 
+.ac-bar-legend-element text {
+    font-size: 0.8em;
+}
+
 .ac-bar-axis path {
     stroke: #d6d6d6;
     stroke-width: 1px;
